# notion-tools

./: .gitignore  LICENSE  README.md  Untitled.ipynb  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
notion/: __main__.py  block.py  cli.py  client.py  collection.py  config.py  ctx.py  jupyter_ux.py  monitor.py  settings.py  smoke_test.py  store.py  utils.py
